Fixed-20788: Listing page no equal spacing in product in list view

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
@@ -345,7 +345,7 @@
         .product-item-actions {
             position: relative;
             z-index: 1;
-            margin-top: 9px;
+            margin-top: @indent__s;
         }
     }
 
